--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -86,7 +86,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -111,7 +111,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -136,7 +136,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -161,7 +161,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -186,7 +186,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -211,7 +211,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -236,7 +236,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -261,7 +261,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one" style="border-bottom: solid rgb(255, 255, 255)">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -286,7 +286,7 @@
         <a class="atop" href="sololeveling.html"
           ><div class="one">
             <div class="image">
-              <img src="/Solo Leveling/sololeveling.jpg" />
+              <img src="Solo Leveling/sololeveling.jpg" />
             </div>
             <div class="description">
               <h3>Solo Leveling</h3>
@@ -317,7 +317,7 @@
           <a class="apop" href="sololeveling.html">
             <div class="bigbox">
               <div class="img2">
-                <img src="/Solo Leveling/sololeveling.jpg" />
+                <img src="Solo Leveling/sololeveling.jpg" />
               </div>
               <div class="texts">
                 <h3>Solo Leveling</h3>
@@ -345,7 +345,7 @@
           <a class="apop" href="sololeveling.html">
             <div class="bigbox">
               <div class="img2">
-                <img src="/Solo Leveling/sololeveling.jpg" />
+                <img src="Solo Leveling/sololeveling.jpg" />
               </div>
               <div class="texts">
                 <h3>Solo Leveling</h3>
@@ -372,7 +372,7 @@
           <a class="apop" href="sololeveling.html">
             <div class="bigbox">
               <div class="img2">
-                <img src="/Solo Leveling/sololeveling.jpg" />
+                <img src="Solo Leveling/sololeveling.jpg" />
               </div>
               <div class="texts">
                 <h3>Solo Leveling</h3>
@@ -399,7 +399,7 @@
           <a class="apop" href="sololeveling.html">
             <div class="bigbox">
               <div class="img2">
-                <img src="/Solo Leveling/sololeveling.jpg" />
+                <img src="Solo Leveling/sololeveling.jpg" />
               </div>
               <div class="texts">
                 <h3>Solo Leveling</h3>
@@ -431,7 +431,7 @@
       <div class="mangapart">
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -453,7 +453,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -475,7 +475,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -497,7 +497,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -519,7 +519,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -541,7 +541,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -563,7 +563,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -585,7 +585,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -607,7 +607,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -629,7 +629,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -651,7 +651,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -673,7 +673,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -695,7 +695,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -717,7 +717,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -739,7 +739,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
@@ -761,7 +761,7 @@
 
         <div class="rectangle">
           <div class="img3">
-            <img src="/Solo Leveling/sololeveling.jpg" />
+            <img src="Solo Leveling/sololeveling.jpg" />
           </div>
           <div class="texts2">
             <h3>Solo Leveling</h3>
